Shortcut routes security fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
         <div class="header-nav">
           <% if current_user %>
             <%= link_to "@#{current_user.username}", user_path(current_user) %>
-            <%= link_to 'Выйти', log_out_path %>
+            <%= link_to 'Выйти', session_path, data: {method: :delete} %>
           <% else  %>
-            <%= link_to 'Зарегестрироваться', sign_up_path, class: 'button button-light button-small' %>
-            <%= link_to 'Войти', log_in_path, class: 'button button-light button-small'  %>
+            <%= link_to 'Зарегестрироваться', new_user_path, class: 'button button-light button-small' %>
+            <%= link_to 'Войти', new_session_path, class: 'button button-light button-small'  %>
           <% end %>
         </div>
       </div>
